--- a/main.html
+++ b/main.html
@@ -10,6 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="holder">
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		<div>0123456789</div>
+		
+	</div>
 
 </body>
 
